--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Test unit #단위 테스트 step
+        run: yarn test:unit
+
       - name: Build page
         run: yarn build
         env:
